# holewinski.dev

./: .dockerignore  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  astro.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  site.json  tsconfig.json
.astro/: content-assets.mjs  data-store.json  settings.json
.astro/collections/: posts.schema.json
about/: Dockerfile  auth.ts  keystone.ts  package.json  pnpm-lock.yaml  schema.graphql  schema.prisma  schema.ts
about/admin/: config.tsx
api/: docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
api/config/: plugins.js
api/src/: index.js
config/: deploy.yml
kustomize/: deployment.yaml  ingress.yaml  service.yaml
notes/: .gitignore  astro.config.ts  pnpm-lock.yaml
notes/resume/: resume.typ
notes/src/: config.ts  content.config.ts
resume/: .gitattributes  Dockerfile  altacv.cls  experience.tex  makefile  nginx.conf  projects.tex  resume.tex  resume.typ  sidebar.tex
resume/config/: deploy.yml
site/: README.md  package.json  palette.config.ts  pnpm-lock.yaml  tailwind.config.ts
site/app/: root.tsx  tailwind.css
site/tw-plugin/: font.ts
spotify/: .env.template  Cargo.toml  Dockerfile  iterm2_statusbar.py  openapi.json  readme.md
spotify/client/: package.json  pnpm-lock.yaml  tsconfig.json
spotify/client/src/: hooks.ts  types.ts
spotify/src/: dispatch.rs  heartbeat.rs  main.rs
src/: config.ts  constants.ts  content.config.ts  fonts.ts  main.tsx  theme.ts
tmp/: _index.md  go.mod  hugo.toml
(+59 files in other folders)
