[package]
name = "spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
dotenv = "0.15.0"
rspotify = { version = "0.11.7", features = ["cli"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
